# cfb-rankings

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml  requirements.txt  utils.py
.agents/: README.md
.agents/agents/: platform-researcher.md  repo-researcher.md  reviewer.md
.agents/references/: chat-and-board-format.md  test-ladder.md  verification-checklist.md
.agents/skills/work/: SKILL.md
.agents/templates/: implementation-report.yaml  status.yaml  task-handoff.yaml
.github/workflows/: daily-keep-alive.yml  test-week-run.yml  weekly-update.yml
agents/: developer.md  orchestrator.md  tester.md
database/: get_games.py  get_teams.py  model_to_db.py  model_to_df.py
docs/cfb-site-migration/: requirements.yaml
frontend/: streamlit_app.py
model/: connectivity.py  model.py  prior_model.py  process_data.py
references/: review-checklist.md  workflow-architecture.md
templates/: plan.yaml  requirements.yaml
