[project]
name = "cfb-rankings"
version = "0.1.0"
description = "College football team ranking optimization pipeline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "pandas",
    "plotly",
    "python-dotenv",
    "sqlalchemy",
    "streamlit",
    "supabase",
]

[project.optional-dependencies]
pipeline = [
    "cvxpy",
    "networkx",
    "psycopg2-binary",
    "requests",
]
